[package]
name = "oura"
description = "The tail of Cardano"
version = "1.10.1"
edition = "2021"
repository = "https://github.com/txpipe/oura"
homepage = "https://github.com/txpipe/oura"
documentation = "https://docs.rs/oura"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]


[dependencies]
pallas-multiplexer = "0.18.3"
pallas-miniprotocols = "0.18.3"
pallas-primitives = "0.30.1"
pallas-traverse = "0.30.1"
pallas-addresses = "0.30.1"
pallas-codec = "0.30.1"
pallas-crypto = "0.30.1"
# pallas = { git = "https://github.com/txpipe/pallas" }
# pallas = { path = "../pallas/pallas" }
hex = "0.4.3"
bech32 = "0.9.1"
clap = "3.2.25"
log = "0.4.20"
env_logger = "0.10.1"
crossterm = "0.27"
merge = "0.1.0"
webpki = ">=0.22.2"
config = { version = "0.13.4", default-features = false, features = ["toml", "yaml", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["arbitrary_precision"] }
strum = "0.26.3"
strum_macros = "0.26.4"
prometheus_exporter = { version = "0.8.5", default-features = false }
unicode-truncate = "0.2.0"
time = "0.3.36"

# feature logs
file-rotate = { version = "0.7.1", optional = true }

# feature: webhook
reqwest = { version = "0.12.5", optional = true, features = ["blocking", "json"] }

# feature: kafkasink
kafka = { version = "0.10.0", optional = true }

# feature: elasticsink
elasticsearch = { version = "7.14.0-alpha.1", optional = true }

# feature: fingerprint
murmur3 = { version = "0.5.2", optional = true }

# feature: aws
aws-config = { version = "0.14.0", optional = true }
aws-sdk-sqs = { version = "0.14.0", optional = true }
aws-sdk-lambda = { version = "0.14.0", optional = true }
aws-sdk-s3 = { version = "0.14.0", optional = true }

# features: elasticsearch || aws
tokio = { version = "1.35.0", optional = true, features = ["rt"] }

# required for CI to complete successfully
openssl = { version = "0.10", optional = true, features = ["vendored"] }

# redis support
redis = { version = "0.24.0", optional = true, features = ["tokio-comp"] }

# features: gcp
google-cloud-gax = {version ="0.19.0", optional = true }
google-cloud-pubsub = { version = "0.28.0", optional = true, features = ["google-cloud-auth"] }
google-cloud-googleapis = { version = "0.15.0", optional = true }

# features: rabbitmqsink
lapin = { version = "2.1.1", optional = true }

[features]
default = []
web = ["reqwest"]
logs = ["file-rotate"]
webhook = ["web"]
kafkasink = ["kafka", "openssl"]
elasticsink = ["elasticsearch", "tokio"]
fingerprint = ["murmur3"]
aws = ["aws-config", "aws-sdk-sqs", "aws-sdk-lambda", "aws-sdk-s3", "tokio"]
redissink = ["redis", "tokio"]
gcp = ["google-cloud-pubsub", "google-cloud-googleapis", "tokio", "web", "google-cloud-gax"]
rabbitmqsink = ["lapin", "tokio"]
